@@ -1518,9 +1518,11 @@ $wgMessageStructure = array(
 		'nolinkshere-ns',
 		'isredirect',
 		'istemplate',
+		'isimage',
 		'whatlinkshere-prev',
 		'whatlinkshere-next',
 		'whatlinkshere-links',
+		'whatlinkshere-hideimages',
 		'whatlinkshere-hideredirs',
 		'whatlinkshere-hidetrans',
 		'whatlinkshere-hidelinks',
